--- a/test.ipynb
+++ b/test.ipynb
@@ -435,9 +435,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-30T02:13:13.568657100Z",
+     "start_time": "2023-10-30T02:12:58.114517100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.lib.display.IFrame at 0x13ea5cc0fb0>",
+      "text/html": "\n        <iframe\n            width=\"100%\"\n            height=\"475\"\n            src=\"http://DESKTOP-24BL8AM:40000/dtale/iframe/1\"\n            frameborder=\"0\"\n            allowfullscreen\n            \n        ></iframe>\n        "
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": ""
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import dtale\n",
     "import pandas as pd \n",
